kubernetes/apps/home-system/stalwart/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-admin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "admin-mail.${DOMAIN1}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - "admin-mail.${DOMAIN1}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart
          port: 8080
